--- a/Frontend/dashboard/package.json
+++ b/Frontend/dashboard/package.json
@@ -14,11 +14,13 @@
 		"@types/node": "^12.20.6",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
+		"@types/react-vis": "^1.11.6",
 		"react": "^17.0.1",
 		"react-bootstrap-icons": "^1.4.0",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.3",
+		"victory": "^35.4.12",
 		"web-vitals": "^1.1.1"
 	},
 	"scripts": {
