--- a/Frontend/dashboard/package.json
+++ b/Frontend/dashboard/package.json
@@ -19,6 +19,7 @@
 		"react-bootstrap-icons": "^1.4.0",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.3",
+		"s-ago": "^2.2.0",
 		"typescript": "^4.2.3",
 		"victory": "^35.4.12",
 		"web-vitals": "^1.1.1"
