--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
+cryptography==3.4.7
 dnspython==2.1.0
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-PyMongo==2.3.0
+gunicorn==20.1.0
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+oauthlib==3.1.0
+pycparser==2.20
 pymongo==3.11.3
 python-dotenv==0.15.0
+requests==2.25.1
+urllib3==1.26.4
 Werkzeug==1.0.1
 wincertstore==0.2
