--- a/Frontend/login/package.json
+++ b/Frontend/login/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.2",
 		"react": "^17.0.1",
+		"react-bootstrap-icons": "^1.4.0",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.3",
